# liboextensioncreator

./: .gitignore  CHANGES.rst  MANIFEST.in  README.rst  extensioncreator.py  extensioncreator.ui  liboextensioncreator.py  libreofficeextensioncreator.ui  requirements.txt  setup.cfg  setup.py
src/liboextensioncreator/: liboextensioncreator.css  liboextensioncreator.py
src/liboextensioncreator/locales/: de_DE.qm  de_DE.ts
src/liboextensioncreator/styles/: liboextensioncreator.css
