[metadata]
# replace with your username:
name = liboextensioncreator
version = 0.0.5
author = Andreas Mantke
author_email = maand@gmx.de
description = A package to create LibreOffice non-code extensions
long_description = file: README.rst
url = https://github.com/andreasma/liboextensioncreator
project_urls =
    Bug Tracker = https://github.com/andreasma/liboextensioncreator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
